@@ -1,27 +1,18 @@
 /*
- * Hibernate, Relational Persistence for Idiomatic Java
- *
- * License: GNU Lesser General Public License (LGPL), version 2.1 or later.
- * See the lgpl.txt file in the root directory or <http://www.gnu.org/licenses/lgpl-2.1.html>.
+ * SPDX-License-Identifier: LGPL-2.1-or-later
+ * Copyright Red Hat Inc. and Hibernate Authors
  */
 package org.hibernate.orm.test.jpa.persistenceunit;
 
-import java.io.IOException;
-import java.net.URL;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Enumeration;
-import java.util.HashMap;
+import java.lang.invoke.MethodHandles;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 
-import org.hibernate.cfg.AvailableSettings;
 import org.hibernate.internal.CoreMessageLogger;
-import org.hibernate.jpa.boot.internal.PersistenceXmlParser;
+import org.hibernate.jpa.boot.spi.PersistenceXmlParser;
 
-import org.hibernate.testing.TestForIssue;
+import org.hibernate.testing.orm.junit.JiraKey;
 import org.hibernate.testing.junit4.BaseUnitTestCase;
 import org.hibernate.testing.logger.LoggerInspectionRule;
 import org.hibernate.testing.logger.Triggerable;
@@ -38,13 +29,13 @@ import static org.junit.Assert.assertTrue;
 /**
  * @author Andrea Boriero
  */
-@TestForIssue(jiraKey = "HHH-11845")
+@JiraKey(value = "HHH-11845")
 public class DuplicatePersistenceUnitNameTest extends BaseUnitTestCase {
 	private Triggerable triggerable;
 
 	@Rule
 	public LoggerInspectionRule logInspection = new LoggerInspectionRule(
-			Logger.getMessageLogger( CoreMessageLogger.class, PersistenceXmlParser.class.getName() )
+			Logger.getMessageLogger( MethodHandles.lookup(), CoreMessageLogger.class, PersistenceXmlParser.class.getName() )
 	);
 
 	@Before
@@ -61,32 +52,14 @@ public class DuplicatePersistenceUnitNameTest extends BaseUnitTestCase {
 
 	@Test
 	public void testDuplicatePersistenceUnitNameLogAWarnMessage() {
-		final Map<String, Object> properties = new HashMap<String, Object>();
-		properties.put( AvailableSettings.CLASSLOADERS, Arrays.asList( new TestClassLoader() ) );
-		PersistenceXmlParser.locatePersistenceUnits( properties );
+		PersistenceXmlParser.create().parse( List.of(
+				findAsResource(
+						"org/hibernate/jpa/test/persistenceunit/META-INF/persistence.xml"
+				),
+				findAsResource(
+						"org/hibernate/jpa/test/persistenceunit/META-INF/persistenceUnitForNameDuplicationTest.xml"
+				)
+		) );
 		assertTrue( "The warn HHH015018 has not been logged ", triggerable.wasTriggered() );
-	}
-
-	private static class TestClassLoader extends ClassLoader {
-		final List<URL> urls;
-
-		public TestClassLoader() {
-			urls = Arrays.asList(
-				findAsResource(
-					"org/hibernate/jpa/test/persistenceunit/META-INF/persistence.xml"
-				)
-				,
-				findAsResource(
-					"org/hibernate/jpa/test/persistenceunit/META-INF/persistenceUnitForNameDuplicationTest.xml"
-				)
-			);
-		}
-
-		@Override
-		protected Enumeration<URL> findResources(String name) throws IOException {
-			return name.equals( "META-INF/persistence.xml" ) ?
-					Collections.enumeration( urls ) :
-					Collections.emptyEnumeration();
-		}
 	}
 }
